--- a/Work.html
+++ b/Work.html
@@ -127,19 +127,13 @@
 		.image-container img {
 			transition: transform 2s;
 			opacity: 1;
-			transition: opacity 0.5s ease-in-out;
+			transition: all 0.5s ease-in-out;
 		}
 
 		.image-container:hover img {
 			transform: scale(1.3);
 			opacity: 0.3;
 			transition-duration: 0.5s;
-		}
-
-		.image-container img {
-			transition: transform 1s;
-			opacity: 1;
-			transition: opacity 0.5s ease-in-out;
 		}
 
 		.image-container:hover .image-title {
@@ -189,7 +183,7 @@
 		</div>
 		<div class="image-container">
 			<a href="airsoft.html">
-			<img src="techzzproductions_files/techzzproductions airsoft thumbnail.jpg" alt="Airsoft Thumbnail" class="image-grid img">
+			<img src="techzzproductions_files/techzzproductions airsoft thumbnail.JPG" alt="Airsoft Thumbnail" class="image-grid img">
 			<div class="image-title">Airsoft</div>
 			</a>
 		</div>
