--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 	
 	<header class="header">
-		<a href="techzzproductions.html"><img src="techzzproductions_files/techzzproductions logo.PNG" alt="Logo" class="logo"></a>
+		<a href="index.html"><img src="techzzproductions_files/techzzproductions logo.PNG" alt="Logo" class="logo"></a>
 		<div class="button-container">
 			<a href="Work.html"><button class="button">Work</button></a>
 			<a href="showreel.html"><button class="button">Showreel</button></a>
