--- a/climbing.html
+++ b/climbing.html
@@ -160,7 +160,7 @@
 			<img src="techzzproductions_files/climbing 13.JPG" class="image-grid img">
 		</div>
 		<div class="image-container">
-			<img src="techzzproductions_files/climbing 11.jpg" class="image-grid img">
+			<img src="techzzproductions_files/climbing11.jpg" class="image-grid img">
 		</div>
 		<div class="image-container">
 			<img src="techzzproductions_files/climbing 10.jpg" class="image-grid img">
@@ -178,5 +178,5 @@
 			<li><a href="https://www.youtube.com/yourusername"><img src="techzzproductions_files/techzzproductions youtube logo.png" alt="YouTube" style="height: 30px; width: 30px;"></a></li>
 		</ul>
 	</footer>
-</body> its not like we arent alowed to edit it 
+</body>
 </html>
