--- a/climbing.html
+++ b/climbing.html
@@ -160,7 +160,7 @@
 			<img src="techzzproductions_files/climbing 13.JPG" class="image-grid img">
 		</div>
 		<div class="image-container">
-			<img src="techzzproductions_files/climbing11.jpg" class="image-grid img">
+			<img src="techzzproductions_files/climbing11.PNG" class="image-grid img">
 		</div>
 		<div class="image-container">
 			<img src="techzzproductions_files/climbing 10.jpg" class="image-grid img">
