--- a/climbing.html
+++ b/climbing.html
@@ -163,7 +163,7 @@
 			<img src="techzzproductions_files/climbing11.PNG" class="image-grid img">
 		</div>
 		<div class="image-container">
-			<img src="techzzproductions_files/climbing 10.jpg" class="image-grid img">
+			<img src="techzzproductions_files/climbing 10.PNG" class="image-grid img">
 		</div>
 		<div class="image-container">
 			<img src="techzzproductions_files/climbing 12.jpg" class="image-grid img">
