--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 		}
 
 		.logo {
-			width: 160px;
+			width: 80px;
 			height: 80px;
 		}
 		
@@ -110,7 +110,7 @@
 			<a href="Work.html"><button class="button">Work</button></a>
 			<a href="showreel.html"><button class="button">Showreel</button></a>
 			<a href="contact.html"><button class="button">Contact</button></a>
-			<a href="about.html"><button class="button">About</button></a>
+		
 		</div>
 	</header>
 
@@ -124,10 +124,10 @@
 	
 <footer class="footer">
 	<ul class="social-icons">
-		<li><a href="https://www.instagram.com/yourusername"><img src="techzzproductions_files/techzzproductions instagram logo.png" alt="Instagram" style="height: 30px; width: 30px;"></a></li>
+		<li><a href="https://www.instagram.com/techzzproductions/"><img src="techzzproductions_files/techzzproductions instagram logo.png" alt="Instagram" style="height: 30px; width: 30px;"></a></li>
 		<li><a href="https://www.twitter.com/yourusername">
 			<img src="techzzproductions_files/techzzproductions twitter logo.png" alt="Twitter" style="height: 30px; width: 30px;"></a></li>
-		<li><a href="https://www.youtube.com/yourusername"><img src="techzzproductions_files/techzzproductions youtube logo.png" alt="YouTube" style="height: 30px; width: 30px;"></a></li>
+		<li><a href="https://www.youtube.com/channel/UCMguKqrlYg6NVFiajLFCbhA"><img src="techzzproductions_files/techzzproductions youtube logo.png" alt="YouTube" style="height: 30px; width: 30px;"></a></li>
 	</ul>
 </footer>
 </html>
